实现主页面

--- a/project.config.json
+++ b/project.config.json
@@ -11,6 +11,7 @@
     "postcss": true,
     "minified": true,
     "enhance": true,
+    "checkSiteMap": false,
     "showShadowRootInWxmlPanel": true,
     "packNpmRelationList": [],
     "babelSetting": {
