--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "pages/register/register",
     "pages/report/report",
     "pages/settings/settings",
-    "pages/user-profile-detail/user-profile-detail"
+    "pages/user-profile-detail/user-profile-detail",
+    "pages/basicPractice/basicPractice"
   ],
   "window": {
     "navigationBarTextStyle": "black",
