完成设置页面

--- a/app.json
+++ b/app.json
@@ -15,6 +15,8 @@
     "pages/register/register",
     "pages/report/report",
     "pages/settings/settings",
+    "pages/user-agreement/user-agreement",
+    "pages/privacy-policy/privacy-policy",
     "pages/user-profile-detail/user-profile-detail",
     "pages/basicPractice/basicPractice"
   ],
